--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -9,6 +9,9 @@
     padding-top: 85px;
     overflow: hidden;
     height: 100vh;
+    @include mobile {
+        padding-top: 70px;
+    }
     & .base-block {
         display: flex;
         justify-content: center;
@@ -21,6 +24,7 @@
         z-index: 20;
         @include mobile {
             grid-template-columns: 1fr;
+            padding-top: 0;
         }
         & .base-tube {
             margin-top: 60px;
@@ -104,7 +108,7 @@
     width: 1920px;
     @include mobile {
         width: 1100px;
-        top: 580px;
+        top: 520px;
     }
     &>img {
         width: 100%;
@@ -241,7 +245,7 @@
             @include mobile {
                 font-size: 27px;
                 line-height: 35px;
-                margin-top: 40px;
+                margin-top: 100px;
             }
         }
         & .forest {
