--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -15,6 +15,9 @@
     & .base-block {
         display: flex;
         justify-content: center;
+        @include tablet {
+            height: 100%;
+        }
     }
     & .base-body {
         display: grid;
@@ -28,8 +31,21 @@
         }
         & .base-tube {
             margin-top: 60px;
-            @include mobile {
-                display: none;
+            &:first-child {
+                @include mobile {
+                    position: absolute;
+                    left: -30px;
+                    width: 120px;
+                    bottom: 110px;
+                }
+            }
+            &:last-child {
+                @include mobile {
+                    position: absolute;
+                    right: -30px;
+                    width: 120px;
+                    bottom: 110px;
+                }
             }
             & img {
                 width: 100%;
@@ -66,8 +82,8 @@
                 margin-top: 22px;
                 color: $primary;
                 @include mobile {
-                    font-size: 30px;
-                    line-height: 34px;
+                    font-size: 18px;
+                    line-height: 24px;
                 }
             }
             & .base-mouse {
@@ -109,7 +125,8 @@
     width: 1920px;
     @include mobile {
         width: 1100px;
-        top: 520px;
+        top: auto;
+        bottom: 0;
     }
     &>img {
         width: 100%;
@@ -431,9 +448,11 @@
             grid-template-columns: 1fr;
         }
         @include mobile {
+            position: relative;
             padding: 0 20px;
         }
         & .hope-card {
+            background-image: url(../../assets/images/png/notes-xl.png);
             width: 722px;
             height: 871px;
             background-size: cover;
@@ -442,6 +461,8 @@
             flex-direction: column;
             align-items: flex-end;
             @include mobile {
+                background-image: url(../../assets/images/png/notes.png);
+                align-items: center;
                 width: 100%;
                 height: 470px;
             }
@@ -495,6 +516,17 @@
             @include tablet {
                 display: none;
             }
+            @include mobile {
+                display: block;
+                position: absolute;
+                left: 50%;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                z-index: -1;
+                width: 400px;
+                transform: translateX(-50%);
+            }
             & img {
                 position: absolute;
                 &.cell-first {
@@ -502,6 +534,14 @@
                     height: 427px;
                     transform: scaleX(-1);
                     margin-top: -20px;
+                    @include mobile {
+                        width: 317px;
+                        height: 317px;
+                        -webkit-transform: scaleX(-1);
+                        transform: scaleX(1);
+                        margin-top: -200px;
+                        margin-left: -40px;
+                    }
                 }
                 &.cell-second {
                     width: 427px;
@@ -509,11 +549,21 @@
                     transform: scaleX(-1) rotate(-25deg);
                     margin-left: 360px;
                     margin-top: 70px;
+                    @include mobile {
+                        display: none;
+                    }
                 }
                 &.cell-third {
                     width: 564px;
                     height: 564px;
                     margin-top: 260px;
+                    @include mobile {
+                        height: 354px;
+                        bottom: -210px;
+                        position: absolute;
+                        right: -100px;
+                        width: 354px;
+                    }
                 }
             }
         }
@@ -546,84 +596,110 @@
     z-index: 20;
     padding-top: 85px;
     background-size: cover;
-    background-position: center 25px;
+    background-position: center 0;
     background-repeat: no-repeat;
+    @include tablet {
+        background-position: center -24px;
+        padding-top: 55px;
+    }
     & .derp-block {
         display: flex;
         max-width: 1468px;
         width: 100%;
+        @include tablet {
+            position: relative;
+        }
         & .derp-tubes {
-            width: 752px;
+            width: 702px;
             height: 992px;
             position: relative;
             @include tablet {
-                display: none;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
             }
             & img {
-                width: 366px;
+                width: 310px;
                 position: absolute;
+                @include tablet {
+                    width: 120px;
+                    position: absolute;
+                    z-index: 1;
+                }
                 &.tube-first {
                     left: 0;
+                    @include tablet {
+                        left: -20px;
+                        bottom: 110px;
+                    }
                 }
                 &.tube-second {
                     right: 0;
+                    @include tablet {
+                        right: -20px;
+                        bottom: 110px;
+                    }
                 }
                 &.tube-third {
                     left: 50%;
                     transform: translateX(-50%);
                     top: 72px;
+                    @include tablet {
+                        display: none;
+                    }
                 }
             }
         }
-        & .derp-text {
-            color: $white;
-            margin-left: 80px;
-            margin-top: 120px;
+    }
+    & .derp-text {
+        color: $white;
+        margin-left: 100px;
+        margin-top: 110px;
+        @include tablet {
+            margin: 94px 30px 0;
+            text-align: center;
+            width: 100%;
+        }
+        & h1 {
+            font-weight: 800;
+            font-size: 76px;
+            letter-spacing: 0.08em;
+            @include mobile {
+                font-size: 46px;
+            }
+        }
+        & h2 {
+            font-weight: 800;
+            font-size: 40px;
+            letter-spacing: 0.08em;
+            max-width: 355px;
+            line-height: 1.2;
             @include tablet {
-                margin: 80px 20px 0;
-                text-align: center;
-                width: 100%;
+                max-width: 100%;
             }
-            & h1 {
-                font-weight: 800;
-                font-size: 76px;
-                letter-spacing: 0.08em;
-                @include mobile {
-                    font-size: 46px;
-                }
+            @include mobile {
+                font-size: 30px;
             }
-            & h2 {
-                font-weight: 800;
-                font-size: 40px;
-                letter-spacing: 0.08em;
-                max-width: 355px;
-                line-height: 1.2;
-                @include tablet {
-                    max-width: 100%;
-                }
-                @include mobile {
-                    font-size: 30px;
-                }
+        }
+        & p {
+            font-family: $font-Roboto;
+            font-size: 22px;
+            line-height: 40px;
+            max-width: 355px;
+            @include tablet {
+                max-width: 100%;
             }
-            & p {
-                font-family: $font-Roboto;
-                font-size: 22px;
-                line-height: 40px;
-                max-width: 355px;
-                @include tablet {
-                    max-width: 100%;
-                }
-                @include mobile {
-                    font-size: 16px;
-                    line-height: 26px;
-                }
+            @include mobile {
+                font-size: 16px;
+                line-height: 26px;
             }
-            .btn {
-                margin-top: 20px;
-                @include tablet {
-                    margin-left: auto;
-                    margin-right: auto;
-                }
+        }
+        .btn {
+            margin-top: 20px;
+            @include tablet {
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     }
