--- a/assets/css/pages/_common.scss
+++ b/assets/css/pages/_common.scss
@@ -14,3 +14,17 @@ section {
     position: absolute;
     width: 100%;
 }
+
+.loader-section {
+    display: flex;
+    position: fixed;
+    z-index: 999;
+    background-color: $black;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
