--- a/assets/css/base/_variables.scss
+++ b/assets/css/base/_variables.scss
@@ -8,6 +8,7 @@ $white: #FFFFFF;
 $primary: #FFF50B;
 $blue: #0094FF;
 $navy:#000F2F;
+$blue-dark: #0075FF;
 $pink: #BD00FF;
 $pink-800: #FF12C9;
 $pink-700: #FF64F1;
