--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -59,6 +59,8 @@
             flex-direction: column;
             align-items: center;
             margin-top: 12px;
+            justify-content: center;
+            padding-bottom: 140px;
             & p {
                 font-weight: 400;
                 font-size: 23px;
@@ -128,7 +130,7 @@
         top: auto;
         bottom: 0;
     }
-    &>img {
+    & > img {
         width: 100%;
     }
     & .animation {
@@ -197,15 +199,15 @@
                 }
                 & p {
                     font-weight: 400;
-                    font-size: 21px;
+                    font-size: 27px;
                     line-height: 39px;
                     text-align: center;
                     letter-spacing: 0.08em;
                     margin-top: 10px;
                     max-width: 720px;
-                    font-family: $font-Roboto;
+                    // font-family: $font-Roboto;
                     @include mobile {
-                        font-size: 16px;
+                        font-size: 18px;
                         line-height: 26px;
                     }
                 }
@@ -460,7 +462,7 @@
             padding: 0 20px;
         }
         & .hope-card {
-            background-image: url(../assets/images/png/notes-xl.png);
+            background-image: url("../assets/images/png/notes-xl.png");
             width: 722px;
             height: 871px;
             background-size: cover;
@@ -469,7 +471,7 @@
             flex-direction: column;
             align-items: flex-end;
             @include mobile {
-                background-image: url(../assets/images/png/notes.png);
+                background-image: url("../assets/images/png/notes.png");
                 align-items: center;
                 width: 100%;
                 height: 470px;
@@ -730,7 +732,7 @@
         height: 100vh;
         @include mobile {
             height: auto;
-            margin-top: 70px
+            margin-top: 70px;
         }
         & video {
             width: 100%;
@@ -752,7 +754,7 @@
             width: 1100px;
             top: 320px;
         }
-        &>img {
+        & > img {
             width: 100%;
         }
         & .animation {
@@ -858,7 +860,6 @@
             }
             @include mobile {
                 grid-template-columns: 1fr;
-                padding-left: 0;
                 padding: 0 20px;
             }
             & .embrace-member-text {
@@ -934,7 +935,7 @@
         & .logo {
             margin-bottom: 23px;
             @include mobile {
-                width: 290px
+                width: 290px;
             }
         }
         & h4 {
@@ -957,7 +958,7 @@
             display: flex;
             align-items: center;
             gap: 37px;
-            margin-bottom: 46px;
+            margin-bottom: 100px;
             @include mobile {
                 flex-direction: column;
                 gap: 16px;
@@ -970,7 +971,7 @@
             line-height: 80px;
             letter-spacing: 0.08em;
             text-align: center;
-            margin-bottom: 49px;
+            margin-bottom: 40px;
             @include tablet {
                 font-size: 56px;
                 line-height: 70px;
@@ -1006,7 +1007,7 @@
     font-size: 18px;
     line-height: 0;
     text-align: center;
-    letter-spacing: .08em;
+    letter-spacing: 0.08em;
     line-height: 2.3;
     bottom: 190px;
     margin-left: 28px;
@@ -1017,5 +1018,140 @@
         line-height: 2.9;
         bottom: 96px;
         margin-left: 15px;
+    }
+}
+
+.embrace-tokenomics {
+    margin-top: 85px;
+    @include mobile {
+        margin-top: 40px;
+    }
+    & .tokenmics-block {
+        & h3 {
+            text-align: center;
+            color: $primary;
+            font-size: 107px;
+            line-height: 110px;
+            @include mobile {
+                font-size: 41px;
+                line-height: 40px;
+            }
+        }
+        & .tokenmics-top {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            left: 58px;
+            @include laptop {
+                flex-direction: column;
+                left: 0;
+                margin-top: 30px;
+            }
+            & ul {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                font-size: 48px;
+                line-height: 80px;
+                @include mobile {
+                    font-size: 25px;
+                    line-height: 40px;
+                }
+                & span {
+                    width: 25px;
+                    height: 25px;
+                    display: inline-block;
+                    margin-right: 18px;
+                    @include mobile {
+                        width: 15px;
+                        height: 15px;
+                        margin-right: 10px;
+                    }
+                    &.green {
+                        background-color: #50B432;
+                    }
+                    &.yellow {
+                        background-color: #DEED1B;
+                    }
+                    &.red {
+                        background-color: #DF0000;
+                    }
+                    &.cyan {
+                        background-color: #24CBE5;
+                    }
+                    &.indigo {
+                        background-color: #6A64E5;
+                    }
+                }
+            }
+            & .image {
+                flex-shrink: 0;
+            }
+        }
+        & .tokenmics-bottom {
+            display: flex;
+            column-gap: 134px;
+            justify-content: center;
+            @include laptop {
+                padding: 0 40px;
+                column-gap: 40px;
+            }
+            @include mobile {
+                padding: 0 20px;
+                flex-direction: column;
+            }
+            & .tokenmics-item {
+                margin-bottom: 32px;
+                font-size: 40px;
+                line-height: 50px;
+                @include mobile {
+                    margin-bottom: 10px;
+                    font-size: 20px;
+                    line-height: 30px;
+                }
+                & h5 {
+                    color: $primary;
+                    text-transform: uppercase;
+                }
+                & ul {
+                    list-style: disc;
+                    padding-left: 30px;
+                    color: $white;
+                    @include mobile {
+                        padding-left: 20px;
+                    }
+                }
+            }
+        }
+        & .embrace-register {
+            margin-top: 54px;
+            display: flex;
+            text-align: center;
+            align-items: center;
+            flex-direction: column;
+            @include mobile {
+                margin-top: 40px;
+                padding: 0 20px;
+            }
+            & h2 {
+                font-size: 58px;
+                line-height: 110px;
+                color: $primary;
+                text-transform: uppercase;
+                @include tablet {
+                    line-height: 60px;
+                    margin-bottom: 30px;
+                }
+                @include mobile {
+                    line-height: 37px;
+                    margin-bottom: 10px;
+                    font-size: 29px;
+                }
+            }
+            & .btn {
+                margin-top: 5px;
+            }
+        }
     }
 }
